Wed Oct 15 18:46:14 UTC 2008  Yan Dai  <dai_y@ociweb.com>

        * dds/DCPS/DataReaderImpl.cpp:
        * dds/DCPS/FailoverListener.cpp:
        * dds/InfoRepo/UpdateListener_T.cpp:
        * dds/InfoRepo/UpdateReceiver_T.h:
        * dds/InfoRepo/UpdateReceiver_T.cpp:

          Fixed warnings.
          
Wed Oct 15 17:37:22 UTC 2008  Yan Dai  <dai_y@ociweb.com>

        * dds/InfoRepo/DCPSInfo_i.cpp:

          Made BIT transport configured with datalink_release_delay_=0, this
          makes the BIT transport send the graceful shutdown to the peer so
          the InfoRepo won't try to reconnect.

        * dds/InfoRepo/FederatorManagerImpl_updates.cpp:

          Fixed some warnings.

Wed Oct 15 15:56:53 UTC 2008  Friedhelm Wolf  <fwolf@dre.vanderbilt.edu>

        * MPC/config/dds_wrapper.mpb:

          Fixed project dependency settings to remove linker errors in
          static builds.

Wed Oct 15 00:15:36 UTC 2008  Yan Dai  <dai_y@ociweb.com>

        * dds/DCPS/BuiltInTopicUtils.h:

          Fixed a guid comparison problem.

        * dds/InfoRepo/DCPS_IR_Topic.h:
        * dds/InfoRepo/DCPS_IR_Topic.cpp:

          Added release() to support topic deletion upon last associated
          sub/pub/topic object deletion. This would fix the access violation
          when sub/pub deletion updates happen after topic deletion.

        * dds/InfoRepo/DCPS_IR_Domain.cpp:
        * dds/InfoRepo/DCPS_IR_Participant.cpp:

          - Made topic->release called upon removing sub/pub/topic.
          - Updated remove_all_dependents() to move iterator to next
            before removing sub/pub/topic to fix access violation.

        * dds/InfoRepo/FederatorManagerImpl.inl:

          Fixed orb reference counting issue.

        * dds/InfoRepo/FederatorManagerImpl.h:
        * dds/InfoRepo/FederatorManagerImpl_updates.cpp:

          - Added lock_ to protect the deferred updata samples.
          - Added processDeferred() call in each processCreate().